Added remove Button

--- a/css/main_pg.css
+++ b/css/main_pg.css
@@ -111,6 +111,26 @@ body{
     justify-content: center;
   
   }
+  #myCanvas{
+    width: 90vmin;
+    
+    min-height: 90vmin;
+    /* background-color:whitesmoke;
+     */
+     background-color: transparent;
+    position: absolute;
+    top: 47%;
+    right: 180px;
+    /* float: right; */
+    transform: translateY(-50%); /* Only vertical centering */
+    border-radius: 10px;
+    /* box-shadow: 0 20px 35px rgba(255,255,255,0.15); */
+    display: grid;
+    grid-template-columns: 5fr 7fr;
+    align-items: center;
+    justify-content: center;
+  
+  }
   
   .imgCanvas{
     position: relative;
@@ -463,8 +483,6 @@ body{
     /* bottom: 20px; */
     right: 20px;
 }
-
-
 .button {
     width: 50px;
     height: 50px;
@@ -482,6 +500,7 @@ body{
     overflow: hidden;
     position: relative;
     gap: 1px;
+   
   }
   
   .svgIcon {
@@ -561,6 +580,7 @@ body{
     font-weight: 500;
     color: var(--color);
     margin-left: 300px;
+    font-weight: bolder;
   }  
   #reset_filters:before {
     content: "";
@@ -592,3 +612,119 @@ body{
     transition: background 0s;
   }
   
+  /* Download button css */
+  /* From Uiverse.io by satyamchaudharydev */ 
+/* .down_btn {
+  --width: 100px;
+  --height: 35px;
+  --tooltip-height: 35px;
+  --tooltip-width: 90px;
+  --gap-between-tooltip-to-button: 18px;
+  --button-color: #1163ff;
+  --tooltip-color: #fff;
+  width: var(--width);
+  height: var(--height);
+  background: var(--button-color);
+  position: relative;
+  text-align: center;
+  border-radius: 0.45em;
+  font-family: "Arial";
+  transition: background 0.3s;
+
+  position: absolute;
+    top: 100px;
+    /* bottom: 20px; 
+    right: 20px;
+}
+
+.down_btn::before {
+  position: absolute;
+  content: attr(data-tooltip);
+  width: var(--tooltip-width);
+  height: var(--tooltip-height);
+  background-color: var(--tooltip-color);
+  font-size: 0.9rem;
+  color: #111;
+  border-radius: .25em;
+  line-height: var(--tooltip-height);
+  bottom: calc(var(--height) + var(--gap-between-tooltip-to-button) + 10px);
+  left: calc(50% - var(--tooltip-width) / 2);
+}
+
+.down_btn::after {
+  position: absolute;
+  content: '';
+  width: 0;
+  height: 0;
+  border: 10px solid transparent;
+  border-top-color: var(--tooltip-color);
+  left: calc(50% - 10px);
+  bottom: calc(100% + var(--gap-between-tooltip-to-button) - 10px);
+}
+
+.down_btn::after,.button::before {
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.5s;
+}
+
+.text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button-wrapper,.text,.icon {
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  color: #fff;
+}
+
+.text {
+  top: 0
+}
+
+.text,.icon {
+  transition: top 0.5s;
+}
+
+.icon {
+  color: #fff;
+  top: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.icon svg {
+  width: 24px;
+  height: 24px;
+}
+
+.down_btn:hover {
+  background: #6c18ff;
+}
+
+/* .down_btn:hover .text {
+  top: -100%;
+} 
+
+.down_btn:hover .icon {
+  top: 0;
+}
+
+.down_btn:hover:before,.down_btn:hover:after {
+  opacity: 1;
+  visibility: visible;
+}
+
+.down_btn:hover:after {
+  bottom: calc(var(--height) + var(--gap-between-tooltip-to-button) - 20px);
+}
+
+.down_btn:hover:before {
+  bottom: calc(var(--height) + var(--gap-between-tooltip-to-button));
+} */
