--- a/css/adminpg.css
+++ b/css/adminpg.css
@@ -27,17 +27,27 @@ table,tr{
   th,td{
     padding: 13px;
   }
+  input{
+    height: 28px;
+    font-size: 18px;
+  }
   #adminpage{
-    display: flex;
-    align-items: center;
+    /* display: flex;
+    /* align-items: center; 
     justify-content: flex-start;
     flex-direction: column;
-    gap: 0;
+    gap: 0; */
+  }
+  .admin-section{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
   }
   .cssbuttons-io {
 	position: relative;
 	
-	font-weight: 500;
+	font-weight: 800;
 	font-size: 18px;
 	letter-spacing: 0.05em;
 	border-radius: 0.5em;
@@ -90,4 +100,73 @@ table,tr{
   }
   .cssbuttons-io a{
     text-decoration: none;
+  }
+
+.Btn {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 45px;
+    height: 45px;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    position: relative;
+    margin-left: 0%;
+    overflow: hidden;
+    transition-duration: .3s;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    background-color: darkmagenta;
+  }
+  
+  /* plus sign */
+  .sign {
+    width: 100%;
+    transition-duration: .3s;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    transform:scaleX(-1);
+  }
+  
+  .sign svg {
+    width: 19px;
+  }
+  
+  .sign svg path {
+    fill: white;
+  }
+  /* text */
+  .text {
+    position: absolute;
+    right: 0%;
+    width: 0%;
+    opacity: 0;
+    color: white;
+    font-size: 1.2em;
+    font-weight: 600;
+    transition-duration: .3s;
+  }
+  /* hover effect on button width */
+  .Btn:hover {
+    width: 125px;
+    border-radius: 40px;
+    transition-duration: .3s;
+  }
+  
+  .Btn:hover .sign {
+    width: 30%;
+    transition-duration: .3s;
+    padding-left: 20px;
+  }
+  /* hover effect button's text */
+  .Btn:hover .text {
+    opacity: 1;
+    width: 70%;
+    transition-duration: .3s;
+    padding-right: 10px;
+  }
+  /* button click effect*/
+  .Btn:active {
+    transform: translate(2px ,2px);
   }
