--- a/css/downloadBtn.css
+++ b/css/downloadBtn.css
@@ -1,4 +1,4 @@
-/* From Uiverse.io by Na3ar-17 */ 
+
 .container {
     padding: 0;
     margin: 0;
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     position: absolute;
     top: 590px;
     right: 0;
@@ -14,6 +15,7 @@
 
     /* background-color: white; */
   }
+  
   
   .label {
     background-color: transparent;
