--- a/css/main_pg.css
+++ b/css/main_pg.css
@@ -6,7 +6,7 @@ body{
     background: #a41ded;
     background: -webkit-linear-gradient(to right, #a41ded, #29afd1, #38e5ba);
     background: linear-gradient(to right, #a41ded, #29afd1, #38e5ba);
-    /* overflow: hidden; */
+    overflow: hidden;
     height: 100vh;
     width: 100vw;
 }
@@ -287,7 +287,7 @@ body{
   }
   /* Editare Css */
   .slider {
-    width: 1000px;
+    width: 50vw;
     position: absolute;
     padding: 10px;
     /* top:300px; */
@@ -297,7 +297,7 @@ body{
     /* background-color: #00ddeb; */
     /* background-color: #34495E; */
     border-radius: 30px;
-    display:flex;
+    display:none;
     /* flex-direction: row; */
   
   }
@@ -569,23 +569,27 @@ body{
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
+    position: absolute;
+    right:15px;
+    bottom: 15px;
     
 }
   #reset_filters {
     --color: #560bad;
-    font-family: inherit;
+    padding: 13px 20px 13px 20px;
     display: inline-block;
-    width: 8em;
+    /* width: 8em;
     height: 2.6em;
-    line-height: 2.5em;
+    line-height: 2.5em; */
     /* margin: 20px; */
+    
     position: relative;
     cursor: pointer;
     overflow: hidden;
     border: 1px solid var(--color);
     transition: color 0.5s;
     z-index: 1;
-    font-size: 17px;
+    font-size: 12px;
     border-radius: 6px;
     font-weight: 500;
     color: var(--color);
@@ -625,125 +629,3 @@ body{
     transition: background 0s;
   }
   
-  /* Download button css */
-  /* From Uiverse.io by satyamchaudharydev */ 
-/* .down_btn {
-  --width: 100px;
-  --height: 35px;
-  --tooltip-height: 35px;
-  --tooltip-width: 90px;
-  --gap-between-tooltip-to-button: 18px;
-  --button-color: #1163ff;
-  --tooltip-color: #fff;
-  width: var(--width);
-  height: var(--height);
-  background: var(--button-color);
-  position: relative;
-  text-align: center;
-  border-radius: 0.45em;
-  font-family: "Arial";
-  transition: background 0.3s;
-
-  position: absolute;
-    top: 100px;
-    /* bottom: 20px; 
-    right: 20px;
-}
-
-.down_btn::before {
-  position: absolute;
-  content: attr(data-tooltip);
-  width: var(--tooltip-width);
-  height: var(--tooltip-height);
-  background-color: var(--tooltip-color);
-  font-size: 0.9rem;
-  color: #111;
-  border-radius: .25em;
-  line-height: var(--tooltip-height);
-  bottom: calc(var(--height) + var(--gap-between-tooltip-to-button) + 10px);
-  left: calc(50% - var(--tooltip-width) / 2);
-}
-
-.down_btn::after {
-  position: absolute;
-  content: '';
-  width: 0;
-  height: 0;
-  border: 10px solid transparent;
-  border-top-color: var(--tooltip-color);
-  left: calc(50% - 10px);
-  bottom: calc(100% + var(--gap-between-tooltip-to-button) - 10px);
-}
-
-.down_btn::after,.button::before {
-  opacity: 0;
-  visibility: hidden;
-  transition: all 0.5s;
-}
-
-.text {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.button-wrapper,.text,.icon {
-  overflow: hidden;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  color: #fff;
-}
-
-.text {
-  top: 0
-}
-
-.text,.icon {
-  transition: top 0.5s;
-}
-
-.icon {
-  color: #fff;
-  top: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.icon svg {
-  width: 24px;
-  height: 24px;
-}
-
-.down_btn:hover {
-  background: #6c18ff;
-}
-
-/* .down_btn:hover .text {
-  top: -100%;
-} 
-
-.down_btn:hover .icon {
-  top: 0;
-}
-
-.down_btn:hover:before,.down_btn:hover:after {
-  opacity: 1;
-  visibility: visible;
-}
-
-.down_btn:hover:after {
-  bottom: calc(var(--height) + var(--gap-between-tooltip-to-button) - 20px);
-}
-
-.down_btn:hover:before {
-  bottom: calc(var(--height) + var(--gap-between-tooltip-to-button));
-} */
-
-/* #downloadBtn{
-  position: absolute;
-  top: 100px;
-  right: 20px;
-} */
